# templates

./: .gitignore  .prettierrc  Index.html  LICENSE  README.md  examples.json  featured.json  index.html  index.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: apply_for_bounty.yml  submit_template.yml
.github/workflows/: main.yml
.railway/: config.json
elixir-phoenix/: Dockerfile  mix.exs
elixir-phoenix/config/: config.exs
elixir/with-cowboy/: .gitignore  README.md  mix.exs
elixir/with-phoenix/: .gitignore  README.md
examples/ackee/: README.md
examples/aid/: README.md
examples/authorizer/: README.md
examples/baojs/: Dockerfile  README.md  package.json
examples/beam/: README.md
examples/bitwarden/: Dockerfile  README.md  railway.sh
examples/blitzjs/: README.md  blitz.config.ts  package.json
examples/browserless/: README.md
examples/cal/: README.md
examples/calendso/: README.md  package.json
examples/code-server/: README.md
examples/cusdis/: README.md
examples/datadog-agent/: Dockerfile  README.md
examples/deno/: Dockerfile  README.md
examples/deno-oak/: .gitignore  Dockerfile  README.md  deps.ts
examples/directus/: Procfile  README.md  directus.config.js  package.json
examples/discord-py/: README.md  main.py  requirements.txt
examples/discordgo/: README.md  go.mod  go.sum  main.go
examples/discordjs-typescript/: README.md  (+1 more)
examples/flask/: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
postgres-basic/: README.md  package.json
src/: index.js
with-prisma-basic/: package.json
(+575 files in other folders)
