[tool.poetry]
name = "flask"
version = "0.1.0"
description = "A minimal Flask application"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
